add attribution class

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Etkin bir biçimde iletişim kurmanıza olanak sağlayan Fransızca Konuşma Kı
 
 <p id="copyright">© Ceyhun Ozugur </p>
 
-
+<p id="attribution"> </p>
 
 </div>
 
